tests/neg-macros/monocle-transparent-invariant-neg/Test_2.scala
val inv: Inv[EmptyTuple] = Inv.make // error
